bin/Parser.js
module.exports = (function(){
  /* Generated by PEG.js 0.6.2 (http://pegjs.majda.cz/). */
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "April": parse_April,
        "At": parse_At,
        "August": parse_August,
        "Between": parse_Between,
        "Date": parse_Date,
        "December": parse_December,
        "Every": parse_Every,
        "February": parse_February,
        "Friday": parse_Friday,
        "In": parse_In,
        "January": parse_January,
        "July": parse_July,
        "June": parse_June,
        "March": parse_March,
        "May": parse_May,
        "Monday": parse_Monday,
        "November": parse_November,
        "October": parse_October,
        "Offset": parse_Offset,
        "On": parse_On,
        "Saturday": parse_Saturday,
        "September": parse_September,
        "Sunday": parse_Sunday,
        "Thursday": parse_Thursday,
        "Tuesday": parse_Tuesday,
        "Wednesday": parse_Wednesday,
        "_": parse__,
        "command": parse_command,
        "date": parse_date,
        "day": parse_day,
        "interval": parse_interval,
        "month": parse_month,
        "number": parse_number,
        "numoffset": parse_numoffset,
        "start": parse_start,
        "time": parse_time,
        "word": parse_word
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "start";
      }
      
      var pos = 0;
      var reportMatchFailures = true;
      var rightmostMatchFailuresPos = 0;
      var rightmostMatchFailuresExpected = [];
      var cache = {};
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        
        if (charCode <= 0xFF) {
          var escapeChar = 'x';
          var length = 2;
        } else {
          var escapeChar = 'u';
          var length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function quote(s) {
        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
         * string literal except for the closing quote character, backslash,
         * carriage return, line separator, paragraph separator, and line feed.
         * Any character may appear in the form of an escape sequence.
         */
        return '"' + s
          .replace(/\\/g, '\\\\')            // backslash
          .replace(/"/g, '\\"')              // closing quote character
          .replace(/\r/g, '\\r')             // carriage return
          .replace(/\n/g, '\\n')             // line feed
          .replace(/[\x80-\uFFFF]/g, escape) // non-ASCII characters
          + '"';
      }
      
      function matchFailed(failure) {
        if (pos < rightmostMatchFailuresPos) {
          return;
        }
        
        if (pos > rightmostMatchFailuresPos) {
          rightmostMatchFailuresPos = pos;
          rightmostMatchFailuresExpected = [];
        }
        
        rightmostMatchFailuresExpected.push(failure);
      }
      
      function parse_start() {
        var cacheKey = 'start@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result4 = parse_command();
        if (result4 !== null) {
          var result5 = [];
          var result6 = parse__();
          while (result6 !== null) {
            result5.push(result6);
            var result6 = parse__();
          }
          if (result5 !== null) {
            var result2 = [result4, result5];
          } else {
            var result2 = null;
            pos = savedPos1;
          }
        } else {
          var result2 = null;
          pos = savedPos1;
        }
        var result3 = result2 !== null
          ? (function(c) {return c})(result2[0])
          : null;
        if (result3 !== null) {
          var result1 = result3;
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        if (result1 !== null) {
          var result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            var savedPos0 = pos;
            var savedPos1 = pos;
            var result4 = parse_command();
            if (result4 !== null) {
              var result5 = [];
              var result6 = parse__();
              while (result6 !== null) {
                result5.push(result6);
                var result6 = parse__();
              }
              if (result5 !== null) {
                var result2 = [result4, result5];
              } else {
                var result2 = null;
                pos = savedPos1;
              }
            } else {
              var result2 = null;
              pos = savedPos1;
            }
            var result3 = result2 !== null
              ? (function(c) {return c})(result2[0])
              : null;
            if (result3 !== null) {
              var result1 = result3;
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          }
        } else {
          var result0 = null;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_command() {
        var cacheKey = 'command@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var result7 = parse_Every();
        if (result7 !== null) {
          var result0 = result7;
        } else {
          var result6 = parse_Between();
          if (result6 !== null) {
            var result0 = result6;
          } else {
            var result5 = parse_At();
            if (result5 !== null) {
              var result0 = result5;
            } else {
              var result4 = parse_On();
              if (result4 !== null) {
                var result0 = result4;
              } else {
                var result3 = parse_In();
                if (result3 !== null) {
                  var result0 = result3;
                } else {
                  var result2 = parse_Date();
                  if (result2 !== null) {
                    var result0 = result2;
                  } else {
                    var result1 = parse_Offset();
                    if (result1 !== null) {
                      var result0 = result1;
                    } else {
                      var result0 = null;;
                    };
                  };
                };
              };
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_On() {
        var cacheKey = 'On@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos, 2) === "on") {
          var result3 = "on";
          pos += 2;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("\"on\"");
          }
        }
        if (result3 !== null) {
          var result12 = parse__();
          if (result12 !== null) {
            var result4 = [];
            while (result12 !== null) {
              result4.push(result12);
              var result12 = parse__();
            }
          } else {
            var result4 = null;
          }
          if (result4 !== null) {
            var savedPos2 = pos;
            var savedPos3 = pos;
            var result9 = parse_day();
            if (result9 !== null) {
              var result10 = [];
              if (input.substr(pos).match(/^[ ,\/]/) !== null) {
                var result11 = input.charAt(pos);
                pos++;
              } else {
                var result11 = null;
                if (reportMatchFailures) {
                  matchFailed("[ ,\\/]");
                }
              }
              while (result11 !== null) {
                result10.push(result11);
                if (input.substr(pos).match(/^[ ,\/]/) !== null) {
                  var result11 = input.charAt(pos);
                  pos++;
                } else {
                  var result11 = null;
                  if (reportMatchFailures) {
                    matchFailed("[ ,\\/]");
                  }
                }
              }
              if (result10 !== null) {
                var result7 = [result9, result10];
              } else {
                var result7 = null;
                pos = savedPos3;
              }
            } else {
              var result7 = null;
              pos = savedPos3;
            }
            var result8 = result7 !== null
              ? (function(d) {return d})(result7[0])
              : null;
            if (result8 !== null) {
              var result6 = result8;
            } else {
              var result6 = null;
              pos = savedPos2;
            }
            if (result6 !== null) {
              var result5 = [];
              while (result6 !== null) {
                result5.push(result6);
                var savedPos2 = pos;
                var savedPos3 = pos;
                var result9 = parse_day();
                if (result9 !== null) {
                  var result10 = [];
                  if (input.substr(pos).match(/^[ ,\/]/) !== null) {
                    var result11 = input.charAt(pos);
                    pos++;
                  } else {
                    var result11 = null;
                    if (reportMatchFailures) {
                      matchFailed("[ ,\\/]");
                    }
                  }
                  while (result11 !== null) {
                    result10.push(result11);
                    if (input.substr(pos).match(/^[ ,\/]/) !== null) {
                      var result11 = input.charAt(pos);
                      pos++;
                    } else {
                      var result11 = null;
                      if (reportMatchFailures) {
                        matchFailed("[ ,\\/]");
                      }
                    }
                  }
                  if (result10 !== null) {
                    var result7 = [result9, result10];
                  } else {
                    var result7 = null;
                    pos = savedPos3;
                  }
                } else {
                  var result7 = null;
                  pos = savedPos3;
                }
                var result8 = result7 !== null
                  ? (function(d) {return d})(result7[0])
                  : null;
                if (result8 !== null) {
                  var result6 = result8;
                } else {
                  var result6 = null;
                  pos = savedPos2;
                }
              }
            } else {
              var result5 = null;
            }
            if (result5 !== null) {
              var result1 = [result3, result4, result5];
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(arg1) {return {on : arg1} })(result1[2])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Every() {
        var cacheKey = 'Every@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos, 5) === "every") {
          var result3 = "every";
          pos += 5;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("\"every\"");
          }
        }
        if (result3 !== null) {
          var result9 = parse__();
          if (result9 !== null) {
            var result4 = [];
            while (result9 !== null) {
              result4.push(result9);
              var result9 = parse__();
            }
          } else {
            var result4 = null;
          }
          if (result4 !== null) {
            var result5 = parse_number();
            if (result5 !== null) {
              var result8 = parse__();
              if (result8 !== null) {
                var result6 = [];
                while (result8 !== null) {
                  result6.push(result8);
                  var result8 = parse__();
                }
              } else {
                var result6 = null;
              }
              if (result6 !== null) {
                var result7 = parse_interval();
                if (result7 !== null) {
                  var result1 = [result3, result4, result5, result6, result7];
                } else {
                  var result1 = null;
                  pos = savedPos1;
                }
              } else {
                var result1 = null;
                pos = savedPos1;
              }
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(arg1, arg2) { return {every : [arg1,arg2]}})(result1[2], result1[4])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Between() {
        var cacheKey = 'Between@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos, 7) === "between") {
          var result3 = "between";
          pos += 7;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("\"between\"");
          }
        }
        if (result3 !== null) {
          var result12 = parse__();
          if (result12 !== null) {
            var result4 = [];
            while (result12 !== null) {
              result4.push(result12);
              var result12 = parse__();
            }
          } else {
            var result4 = null;
          }
          if (result4 !== null) {
            var result5 = parse_time();
            if (result5 !== null) {
              var result11 = parse__();
              if (result11 !== null) {
                var result6 = [];
                while (result11 !== null) {
                  result6.push(result11);
                  var result11 = parse__();
                }
              } else {
                var result6 = null;
              }
              if (result6 !== null) {
                if (input.substr(pos, 3) === "and") {
                  var result7 = "and";
                  pos += 3;
                } else {
                  var result7 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"and\"");
                  }
                }
                if (result7 !== null) {
                  var result10 = parse__();
                  if (result10 !== null) {
                    var result8 = [];
                    while (result10 !== null) {
                      result8.push(result10);
                      var result10 = parse__();
                    }
                  } else {
                    var result8 = null;
                  }
                  if (result8 !== null) {
                    var result9 = parse_time();
                    if (result9 !== null) {
                      var result1 = [result3, result4, result5, result6, result7, result8, result9];
                    } else {
                      var result1 = null;
                      pos = savedPos1;
                    }
                  } else {
                    var result1 = null;
                    pos = savedPos1;
                  }
                } else {
                  var result1 = null;
                  pos = savedPos1;
                }
              } else {
                var result1 = null;
                pos = savedPos1;
              }
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(arg1, arg2) {return {between : [arg1, arg2] }})(result1[2], result1[6])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_At() {
        var cacheKey = 'At@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos, 2) === "at") {
          var result3 = "at";
          pos += 2;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("\"at\"");
          }
        }
        if (result3 !== null) {
          var result6 = parse__();
          if (result6 !== null) {
            var result4 = [];
            while (result6 !== null) {
              result4.push(result6);
              var result6 = parse__();
            }
          } else {
            var result4 = null;
          }
          if (result4 !== null) {
            var result5 = parse_time();
            if (result5 !== null) {
              var result1 = [result3, result4, result5];
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(arg) {return {at: arg}})(result1[2])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_In() {
        var cacheKey = 'In@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos, 2) === "in") {
          var result3 = "in";
          pos += 2;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("\"in\"");
          }
        }
        if (result3 !== null) {
          var result12 = parse__();
          if (result12 !== null) {
            var result4 = [];
            while (result12 !== null) {
              result4.push(result12);
              var result12 = parse__();
            }
          } else {
            var result4 = null;
          }
          if (result4 !== null) {
            var savedPos2 = pos;
            var savedPos3 = pos;
            var result9 = parse_month();
            if (result9 !== null) {
              var result10 = [];
              if (input.substr(pos).match(/^[ ,\/]/) !== null) {
                var result11 = input.charAt(pos);
                pos++;
              } else {
                var result11 = null;
                if (reportMatchFailures) {
                  matchFailed("[ ,\\/]");
                }
              }
              while (result11 !== null) {
                result10.push(result11);
                if (input.substr(pos).match(/^[ ,\/]/) !== null) {
                  var result11 = input.charAt(pos);
                  pos++;
                } else {
                  var result11 = null;
                  if (reportMatchFailures) {
                    matchFailed("[ ,\\/]");
                  }
                }
              }
              if (result10 !== null) {
                var result7 = [result9, result10];
              } else {
                var result7 = null;
                pos = savedPos3;
              }
            } else {
              var result7 = null;
              pos = savedPos3;
            }
            var result8 = result7 !== null
              ? (function(d) {return d})(result7[0])
              : null;
            if (result8 !== null) {
              var result6 = result8;
            } else {
              var result6 = null;
              pos = savedPos2;
            }
            if (result6 !== null) {
              var result5 = [];
              while (result6 !== null) {
                result5.push(result6);
                var savedPos2 = pos;
                var savedPos3 = pos;
                var result9 = parse_month();
                if (result9 !== null) {
                  var result10 = [];
                  if (input.substr(pos).match(/^[ ,\/]/) !== null) {
                    var result11 = input.charAt(pos);
                    pos++;
                  } else {
                    var result11 = null;
                    if (reportMatchFailures) {
                      matchFailed("[ ,\\/]");
                    }
                  }
                  while (result11 !== null) {
                    result10.push(result11);
                    if (input.substr(pos).match(/^[ ,\/]/) !== null) {
                      var result11 = input.charAt(pos);
                      pos++;
                    } else {
                      var result11 = null;
                      if (reportMatchFailures) {
                        matchFailed("[ ,\\/]");
                      }
                    }
                  }
                  if (result10 !== null) {
                    var result7 = [result9, result10];
                  } else {
                    var result7 = null;
                    pos = savedPos3;
                  }
                } else {
                  var result7 = null;
                  pos = savedPos3;
                }
                var result8 = result7 !== null
                  ? (function(d) {return d})(result7[0])
                  : null;
                if (result8 !== null) {
                  var result6 = result8;
                } else {
                  var result6 = null;
                  pos = savedPos2;
                }
              }
            } else {
              var result5 = null;
            }
            if (result5 !== null) {
              var result1 = [result3, result4, result5];
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(arg1) {return {in :arg1} })(result1[2])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Date() {
        var cacheKey = 'Date@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos, 4) === "date") {
          var result3 = "date";
          pos += 4;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("\"date\"");
          }
        }
        if (result3 !== null) {
          var result6 = parse__();
          if (result6 !== null) {
            var result4 = [];
            while (result6 !== null) {
              result4.push(result6);
              var result6 = parse__();
            }
          } else {
            var result4 = null;
          }
          if (result4 !== null) {
            var result5 = parse_date();
            if (result5 !== null) {
              var result1 = [result3, result4, result5];
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(arg1) {return { date: arg1}})(result1[2])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Offset() {
        var cacheKey = 'Offset@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos, 6) === "offset") {
          var result3 = "offset";
          pos += 6;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("\"offset\"");
          }
        }
        if (result3 !== null) {
          var result6 = parse__();
          if (result6 !== null) {
            var result4 = [];
            while (result6 !== null) {
              result4.push(result6);
              var result6 = parse__();
            }
          } else {
            var result4 = null;
          }
          if (result4 !== null) {
            var result5 = parse_numoffset();
            if (result5 !== null) {
              var result1 = [result3, result4, result5];
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(arg1) { return { offset: arg1}})(result1[2])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_numoffset() {
        var cacheKey = 'numoffset@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos, 2) === "t+") {
          var result3 = "t+";
          pos += 2;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("\"t+\"");
          }
        }
        if (result3 !== null) {
          var result4 = parse_number();
          if (result4 !== null) {
            var result1 = [result3, result4];
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(t) { return t[1] })(result1)
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_interval() {
        var cacheKey = 'interval@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        if (input.substr(pos, 7) === "seconds") {
          var result6 = "seconds";
          pos += 7;
        } else {
          var result6 = null;
          if (reportMatchFailures) {
            matchFailed("\"seconds\"");
          }
        }
        if (result6 !== null) {
          var result0 = result6;
        } else {
          if (input.substr(pos, 5) === "hours") {
            var result5 = "hours";
            pos += 5;
          } else {
            var result5 = null;
            if (reportMatchFailures) {
              matchFailed("\"hours\"");
            }
          }
          if (result5 !== null) {
            var result0 = result5;
          } else {
            if (input.substr(pos, 7) === "minutes") {
              var result4 = "minutes";
              pos += 7;
            } else {
              var result4 = null;
              if (reportMatchFailures) {
                matchFailed("\"minutes\"");
              }
            }
            if (result4 !== null) {
              var result0 = result4;
            } else {
              if (input.substr(pos, 6) === "second") {
                var result3 = "second";
                pos += 6;
              } else {
                var result3 = null;
                if (reportMatchFailures) {
                  matchFailed("\"second\"");
                }
              }
              if (result3 !== null) {
                var result0 = result3;
              } else {
                if (input.substr(pos, 4) === "hour") {
                  var result2 = "hour";
                  pos += 4;
                } else {
                  var result2 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"hour\"");
                  }
                }
                if (result2 !== null) {
                  var result0 = result2;
                } else {
                  if (input.substr(pos, 6) === "minute") {
                    var result1 = "minute";
                    pos += 6;
                  } else {
                    var result1 = null;
                    if (reportMatchFailures) {
                      matchFailed("\"minute\"");
                    }
                  }
                  if (result1 !== null) {
                    var result0 = result1;
                  } else {
                    var result0 = null;;
                  };
                };
              };
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_time() {
        var cacheKey = 'time@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos).match(/^[0-2]/) !== null) {
          var result3 = input.charAt(pos);
          pos++;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("[0-2]");
          }
        }
        if (result3 !== null) {
          if (input.substr(pos).match(/^[0-9]/) !== null) {
            var result4 = input.charAt(pos);
            pos++;
          } else {
            var result4 = null;
            if (reportMatchFailures) {
              matchFailed("[0-9]");
            }
          }
          if (result4 !== null) {
            if (input.substr(pos, 1) === ":") {
              var result5 = ":";
              pos += 1;
            } else {
              var result5 = null;
              if (reportMatchFailures) {
                matchFailed("\":\"");
              }
            }
            if (result5 !== null) {
              if (input.substr(pos).match(/^[0-5]/) !== null) {
                var result6 = input.charAt(pos);
                pos++;
              } else {
                var result6 = null;
                if (reportMatchFailures) {
                  matchFailed("[0-5]");
                }
              }
              if (result6 !== null) {
                if (input.substr(pos).match(/^[0-9]/) !== null) {
                  var result7 = input.charAt(pos);
                  pos++;
                } else {
                  var result7 = null;
                  if (reportMatchFailures) {
                    matchFailed("[0-9]");
                  }
                }
                if (result7 !== null) {
                  var result1 = [result3, result4, result5, result6, result7];
                } else {
                  var result1 = null;
                  pos = savedPos1;
                }
              } else {
                var result1 = null;
                pos = savedPos1;
              }
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(t) {return t.join('') })(result1)
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_word() {
        var cacheKey = 'word@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        if (input.substr(pos).match(/^[a-zA-Z]/) !== null) {
          var result3 = input.charAt(pos);
          pos++;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("[a-zA-Z]");
          }
        }
        if (result3 !== null) {
          var result1 = [];
          while (result3 !== null) {
            result1.push(result3);
            if (input.substr(pos).match(/^[a-zA-Z]/) !== null) {
              var result3 = input.charAt(pos);
              pos++;
            } else {
              var result3 = null;
              if (reportMatchFailures) {
                matchFailed("[a-zA-Z]");
              }
            }
          }
        } else {
          var result1 = null;
        }
        var result2 = result1 !== null
          ? (function(w) { return w.join('') })(result1)
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_number() {
        var cacheKey = 'number@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        if (input.substr(pos).match(/^[0-9]/) !== null) {
          var result3 = input.charAt(pos);
          pos++;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("[0-9]");
          }
        }
        if (result3 !== null) {
          var result1 = [];
          while (result3 !== null) {
            result1.push(result3);
            if (input.substr(pos).match(/^[0-9]/) !== null) {
              var result3 = input.charAt(pos);
              pos++;
            } else {
              var result3 = null;
              if (reportMatchFailures) {
                matchFailed("[0-9]");
              }
            }
          }
        } else {
          var result1 = null;
        }
        var result2 = result1 !== null
          ? (function(digits) {return parseInt(digits.join(''),10); })(result1)
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_date() {
        var cacheKey = 'date@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos).match(/^[2]/) !== null) {
          var result3 = input.charAt(pos);
          pos++;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("[2]");
          }
        }
        if (result3 !== null) {
          if (input.substr(pos).match(/^[0]/) !== null) {
            var result4 = input.charAt(pos);
            pos++;
          } else {
            var result4 = null;
            if (reportMatchFailures) {
              matchFailed("[0]");
            }
          }
          if (result4 !== null) {
            if (input.substr(pos).match(/^[1]/) !== null) {
              var result5 = input.charAt(pos);
              pos++;
            } else {
              var result5 = null;
              if (reportMatchFailures) {
                matchFailed("[1]");
              }
            }
            if (result5 !== null) {
              if (input.substr(pos).match(/^[1-9]/) !== null) {
                var result6 = input.charAt(pos);
                pos++;
              } else {
                var result6 = null;
                if (reportMatchFailures) {
                  matchFailed("[1-9]");
                }
              }
              if (result6 !== null) {
                if (input.substr(pos).match(/^[0-1]/) !== null) {
                  var result7 = input.charAt(pos);
                  pos++;
                } else {
                  var result7 = null;
                  if (reportMatchFailures) {
                    matchFailed("[0-1]");
                  }
                }
                if (result7 !== null) {
                  if (input.substr(pos).match(/^[0-9]/) !== null) {
                    var result8 = input.charAt(pos);
                    pos++;
                  } else {
                    var result8 = null;
                    if (reportMatchFailures) {
                      matchFailed("[0-9]");
                    }
                  }
                  if (result8 !== null) {
                    if (input.substr(pos).match(/^[0-3]/) !== null) {
                      var result9 = input.charAt(pos);
                      pos++;
                    } else {
                      var result9 = null;
                      if (reportMatchFailures) {
                        matchFailed("[0-3]");
                      }
                    }
                    if (result9 !== null) {
                      if (input.substr(pos).match(/^[0-9]/) !== null) {
                        var result10 = input.charAt(pos);
                        pos++;
                      } else {
                        var result10 = null;
                        if (reportMatchFailures) {
